syn-state-machine/src/impls/snapshots/syn_state_machine__impls__grouping__tests__it_fails_on_wrong_delim.snap
---
source: syn-state-machine/src/impls/grouping.rs
expression: "crate::parse::<(Ident, Paren<Ident>,\n        Ident)>(::quote::quote! { hello { world } hi })"
---
Err(
    B(
        InvalidDelimiter(
            Parenthesis,
            Brace,
        ),
    ),
)
