syn-state-machine/src/impls/snapshots/syn_state_machine__impls__grouping__tests__it_matches_general_delim.snap
---
source: syn-state-machine/src/impls/grouping.rs
expression: "crate::parse::<(Ident, Group<Ident>,\n        Ident)>(::quote::quote! { hello(world) hi })"
---
Ok(
    (
        (
            Ident(
                hello,
            ),
            Group(
                Ident(
                    world,
                ),
                Parenthesis,
            ),
            Ident(
                hi,
            ),
        ),
        0,
    ),
)
