syn-state-machine/src/impls/snapshots/syn_state_machine__impls__grouping__tests__it_matches_parenthesis.snap
---
source: syn-state-machine/src/impls/grouping.rs
expression: "crate::parse::<(Ident, Paren<Ident>,\n        Ident)>(::quote::quote! { hello(world) hi })"
---
Ok(
    (
        (
            Ident(
                hello,
            ),
            Ident(
                world,
            ),
            Ident(
                hi,
            ),
        ),
        0,
    ),
)
